--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,20 @@
 name: Deploy
 
+# Specifies the events that trigger the workflow
 on:
   push:
-    branches: ['main']
-
+    branches: ["main"]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets permissions for the GITHUB_TOKEN to allow deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Ensures only one deployment runs at a time
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
@@ -21,9 +22,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Pulls the code from the repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Identifies whether you use npm or yarn
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -42,12 +45,14 @@ jobs:
             exit 1
           fi
 
+      # Sets up Node.js environment
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
 
+        # Configures GitHub Pages deployment
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -57,6 +62,7 @@ jobs:
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
 
+      # Restores cache to speed up dependencies installation
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -68,12 +74,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
+      # Installs required npm or yarn dependencies
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
+      # Builds the Next.js app
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        env: # Passes environment variables to the build
+          NEXT_PUBLIC_WEATHER_API: ${{ secrets.NEXT_PUBLIC_WEATHER_API }}
 
+      # Uploads the built files as an artifact for deployment
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -85,8 +96,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: build # Ensures the build job completes first
     steps:
+      # Deploys the build artifact to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
